--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroui/react": "^2.8.0-beta.7",
     "@upstash/redis": "^1.35.0",
+    "lucide-react": "^0.518.0",
     "next": "15.3.3",
     "openai": "^5.3.0",
     "react": "^19.1.0",
