--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.0-beta.10",
+    "@supabase/supabase-js": "^2.50.2",
     "@upstash/redis": "^1.35.0",
     "lucide-react": "^0.518.0",
     "next": "15.3.3",
     "openai": "^5.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
