--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/react": "^2.8.0-beta.13",
+    "@heroui/react": "^2.8.0",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.50.3",
+    "@supabase/supabase-js": "^2.51.0",
     "@upstash/redis": "^1.35.1",
+    "fast-xml-parser": "^5.2.5",
     "lucide-react": "^0.518.0",
     "next": "15.3.3",
-    "openai": "^5.8.2",
+    "openai": "^5.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "youtube-transcript": "^1.2.1"
+    "youtube-transcript": "^1.2.1",
+    "youtubei": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20.19.4",
+    "@types/node": "^20.19.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "eslint": "^9.30.1",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
