--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,7 +15,7 @@
     "@supabase/supabase-js": "^2.57.2",
     "@upstash/redis": "^1.35.3",
     "lucide-react": "^0.518.0",
-    "next": "15.3.3",
+    "next": "^15.5.2",
     "openai": "^5.19.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
