--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/react": "^2.8.3",
+    "@heroui/react": "^2.8.4",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.57.3",
+    "@supabase/supabase-js": "^2.57.4",
     "@upstash/redis": "^1.35.3",
     "lucide-react": "^0.518.0",
-    "next": "^15.5.2",
-    "openai": "^5.20.0",
+    "next": "^15.5.3",
+    "openai": "^5.20.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "update": "^0.7.4",
     "youtubei": "^1.7.0",
     "zustand": "^5.0.8"
   },
