--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-player": "^3.3.2",
     "update": "^0.7.4",
     "youtubei": "^1.7.0",
     "zustand": "^5.0.8"
