--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/input-otp": "^2.1.27",
     "@heroui/react": "^2.8.5",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.78.0",
@@ -21,6 +22,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-player": "^3.3.3",
+    "tailwind-scrollbar": "^4.0.2",
     "update": "^0.7.4",
     "youtubei": "^1.7.0",
     "zustand": "^5.0.8"
@@ -31,7 +33,7 @@
     "@types/node": "^20.19.24",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "eslint": "^9.38.0",
+    "eslint": "^9.39.0",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3"
